--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
     implementation "androidx.room:room-runtime:$rootProject.roomDatabase"
+    implementation "androidx.room:room-rxjava2:$rootProject.roomDatabase"
     annotationProcessor "androidx.room:room-compiler:$rootProject.roomDatabase"
 
     implementation "com.google.dagger:dagger:$rootProject.dagger2"
